--- a/app/views/add-liquidity-pool.pug
+++ b/app/views/add-liquidity-pool.pug
@@ -10,7 +10,7 @@ block container
 	.main-content.py-0
 		.container
 			.row 	
-				.col-12.col-xl-3
+				.col-12.col-xl-auto.menu-section
 					.sidebar-left
 						include ./blocks/navbar
 						.banner-ads.d-none.d-xl-block
@@ -50,7 +50,7 @@ block container
 									button(type="submit" class="btn btn-secondary w-100 mt-5") Withdraw Liquidity Pool
 								
 
-				.col-12.col-xl-3
+				.col-12.col-xl-3.right-section
 					.nav-tab-section 
 						ul#myTab.nav.nav-tabs(role='tablist')
 							li.nav-item(role='presentation')
