--- a/app/views/update-metadata.pug
+++ b/app/views/update-metadata.pug
@@ -9,8 +9,8 @@ block vars
 block container
 	.main-content.py-0
 		.container 
-			.row 	
-				.col-12.col-xl-3
+			.row.flex-xl-nowrap 	
+				.col-12.col-xl-auto.menu-section
 					.sidebar-left
 						include ./blocks/navbar
 						.banner-ads.d-none.d-xl-block
@@ -65,7 +65,7 @@ block container
 												input(type="text", class="form-control", placeholder="Optional URL", name="")
 									button(type="submit" class="btn btn-secondary w-100") Update Token
 								
-				.col-12.col-xl-3
+				.col-12.col-xl-3.right-section
 					.step-bar 
 						h6.step-bar-title How to update token metadata
 						.step-bar-list 
