--- a/app/views/multi-sender.pug
+++ b/app/views/multi-sender.pug
@@ -9,13 +9,13 @@ block vars
 block container
 	.main-content.py-0
 		.container 
-			.row 	
-				.col-12.col-xl-3
+			.row.flex-xl-nowrap 	
+				.col-12.col-xl-auto.menu-section
 					.sidebar-left
 						include ./blocks/navbar
 						.banner-ads.d-none.d-xl-block
 							img(src="./images/banner-ads-1.png", width="100%", alt="ads")
-				.col-12.col-xl-7.content-background-center
+				.col-12.col-xl-9.content-background-center
 					.content-wrapper 
 						.content-submit 
 							.col-12.col-xl-8.mx-auto
