--- a/app/views/unlock.pug
+++ b/app/views/unlock.pug
@@ -9,8 +9,8 @@ block vars
 block container
 	.main-content.py-0
 		.container 
-			.row 	
-				.col-12.col-xl-3
+			.row.flex-xl-nowrap 	
+				.col-12.col-xl-auto.menu-section
 					.sidebar-left
 						include ./blocks/navbar
 						.banner-ads.d-none.d-xl-block
@@ -30,7 +30,7 @@ block container
 											label(for="") LP Token Address
 											input(type="text" class="form-control" placeholder="Enter your seed key")
 										button(type="submit" class="btn btn-secondary w-100") Unlock Token
-				.col-12.col-xl-3
+				.col-12.col-xl-3.right-section
 					.step-bar 
 						h6.step-bar-title How does it work?
 						.step-bar-list 
