--- a/app/views/add-liquidity-pool.pug
+++ b/app/views/add-liquidity-pool.pug
@@ -1,14 +1,14 @@
 extends layout/layout
 
 block vars
-	-title = 'SOLMINT'
+	-title = 'Bee Bee'
 	-bodyClass = 'content-page'
 	-page= 'add-liquidity-pool'
 	-pageName= 'Add Liquidity Pool'
 
 block container
 	.main-content.py-0
-		.container
+		.container-fluid
 			.row 	
 				.col-12.col-xl-auto.menu-section
 					.sidebar-left
