--- a/app/views/blocks/header.pug
+++ b/app/views/blocks/header.pug
@@ -29,5 +29,5 @@ header.main-header
 						img(src="./images/logo-solana.png", alt="Solana Logo")
 					a(href="#!" class="btn btn-primary btn-connect-wallet" data-toggle="modal" data-target="#modalConnectWallet") 
 						//- img(src="./images/logo-no-text.png", alt="" class="img-desktop d-none d-xl-block")
-						img(src="./images/logo-wallet.png", alt="" class="img-mobile d-block d-xl-none")
+						i.fas.fa-wallet.img-desktop.d-block.d-xl-none
 						span.d-none.d-xl-block Connect wallet
