--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,140 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol,
+ul {
+  list-style: none; }
+
+blockquote,
+q {
+  quotes: none; }
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 :root {
   --white-smoke: #EFF2F4;
   --white-flight:#F2F2F2;
@@ -92,8 +228,8 @@ body {
     margin: 100px auto 0; } }
 
 .modal-popup .modal-content {
-  background: #1F1D20;
-  color: #fff;
+  background: #FCFDFE;
+  color: var(--text-black);
   padding: 20px; }
 
 .modal-popup .modal-header {
@@ -134,7 +270,8 @@ body {
     .modal-popup .form-modal .form-select .item-select span {
       font-size: 16px;
       font-weight: 600;
-      line-height: 24px; }
+      line-height: 24px;
+      color: white; }
 
 .btn-primary {
   display: -webkit-box;
@@ -225,7 +362,10 @@ body {
     color: var(--white-smoke); }
 
 .menu-section {
-  background: #F1F5F9; }
+  background: #FFF; }
+  @media only screen and (min-width: 1200px) {
+    .menu-section {
+      padding-inline: 25px; } }
 
 .sidebar-left {
   width: 265px; }
@@ -391,11 +531,12 @@ body.home-page .page-wrapper {
     margin-bottom: 20px; }
 
 .right-section {
-  background: #FFF;
+  background: #FCFDFE;
   margin-bottom: 20px;
   padding-top: 15px;
   border-radius: 0 0 10px 10px;
-  margin-left: auto; }
+  margin-left: auto;
+  margin-right: 15px; }
 
 .step-bar {
   padding-bottom: 25px; }
