--- a/app/views/token-creator.pug
+++ b/app/views/token-creator.pug
@@ -1,14 +1,14 @@
 extends layout/layout
 
 block vars
-	-title = 'SOLMINT'
+	-title = 'Bee Bee'
 	-bodyClass = 'content-page'
 	-page= 'token-creator'
 	-pageName= 'Token Creator'
 
 block container
 	.main-content.py-0
-		.container 
+		.container-fluid 
 			.row.flex-xl-nowrap 	
 				.col-12.col-xl-auto.menu-section
 					.sidebar-left
