--- a/app/views/lock-lp-token.pug
+++ b/app/views/lock-lp-token.pug
@@ -9,7 +9,7 @@ block vars
 block container
 	.main-content.py-0
 		.container-fluid 
-			.row.flex-xl-nowrap 	
+			.row.flex-xl-nowrap.justify-content-xl-between 	
 				.col-12.col-xl-auto.menu-section
 					.sidebar-left
 						include ./blocks/navbar
