--- a/app/views/openbook-market.pug
+++ b/app/views/openbook-market.pug
@@ -9,13 +9,13 @@ block vars
 block container
 	.main-content.py-0
 		.container-fluid 
-			.row.flex-xl-nowrap 	
+			.row.flex-xl-nowrap.justify-content-xl-between 	
 				.col-12.col-xl-auto.menu-section
 					.sidebar-left
 						include ./blocks/navbar
 						.banner-ads.d-none.d-xl-block
 							img(src="./images/banner-ads-1.png", width="100%", alt="ads")
-				.col-12.col-xl-9.content-background-center
+				.col-12.col-xl-9.content-background-center.full-page
 					.content-wrapper 
 						.content-submit 
 							.col-12.col-xl-10.mx-auto
