--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,6 +3,7 @@
    License: none (public domain)
 */
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");
 html,
 body,
 div,
@@ -144,7 +145,8 @@ table {
   --green-color: #00FFAA;
   --footer-bg: #0D0D0F;
   --text-black: #181A1B;
-  --text-blue: #3B43FF; }
+  --text-blue: #3B43FF;
+  --text-purple: #6C40BF; }
 
 html {
   font-size: 62.5%;
@@ -365,7 +367,8 @@ body {
   background: #FFF; }
   @media only screen and (min-width: 1200px) {
     .menu-section {
-      padding-inline: 25px; } }
+      padding-inline: 25px;
+      max-width: 315px; } }
 
 .sidebar-left {
   width: 265px; }
@@ -498,17 +501,126 @@ body {
   background: #F1F5F9; }
 
 body.home-page .page-wrapper {
-  background-image: url("../images/main-bg-2.png");
-  background-position: center;
+  background-image: none; }
+
+body.home-page .menu-support {
+  margin-block: auto 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+  @media only screen and (max-width: 1200px) {
+    body.home-page .menu-support {
+      display: none; } }
+  body.home-page .menu-support .support-socials {
+    margin-block: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    gap: 10px; }
+    body.home-page .menu-support .support-socials a {
+      width: 40px;
+      height: 40px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      background: #eff2f4;
+      border-radius: 4px; }
+  body.home-page .menu-support .support-languagues .nav-tabs {
+    border-radius: 4px;
+    background: #f1f5f9;
+    border: 1px solid #e3e9ee;
+    padding: 5px;
+    -webkit-box-shadow: 0px 0px 0px 2px rgba(255, 255, 255, 0.5) inset;
+    box-shadow: 0px 0px 0px 2px rgba(255, 255, 255, 0.5) inset; }
+    body.home-page .menu-support .support-languagues .nav-tabs .nav-item .nav-link {
+      background-color: transparent;
+      color: var(--text-black);
+      font-size: 14px;
+      font-weight: 600;
+      padding: 6px 22px; }
+      body.home-page .menu-support .support-languagues .nav-tabs .nav-item .nav-link.active {
+        -webkit-box-shadow: 0px 16px 16px -4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 16px 16px -4px rgba(0, 0, 0, 0.1);
+        background: #fcfdfe;
+        border-radius: 6px; }
+
+body.home-page .home-page-section {
+  width: calc(100% - 300px);
+  background-image: url("../images/home-page-bg.png");
+  background-position: top;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: contain;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  body.home-page .home-page-section .home-snip-btn {
+    margin-left: 100px;
+    border: 12px solid rgba(194, 147, 251, 0.2);
+    background-color: white;
+    padding: 8px 24px 8px 12px;
+    border-radius: 48px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    text-decoration: none !important;
+    gap: 10px;
+    font-family: "Sora", sans-serif; }
+    body.home-page .home-page-section .home-snip-btn i {
+      color: #9F68F8;
+      font-size: 50px; }
+    body.home-page .home-page-section .home-snip-btn p {
+      font-size: 24px;
+      font-weight: 800;
+      color: var(--text-black); }
+      body.home-page .home-page-section .home-snip-btn p span {
+        color: red; }
 
 .content-background-center {
   background-image: url("../images/main-bg-2.png");
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 50px; }
+  padding: 50px 50px 20px 50px; }
+  @media only screen and (min-width: 1200px) {
+    .content-background-center {
+      max-width: calc(100% - 665px);
+      -ms-flex-preferred-size: calc(100% - 665px);
+      flex-basis: calc(100% - 665px); }
+      .content-background-center.full-page {
+        max-width: calc(100% - 315px);
+        -ms-flex-preferred-size: calc(100% - 315px);
+        flex-basis: calc(100% - 315px); } }
   @media only screen and (max-width: 767px) {
     .content-background-center {
       padding: 20px; } }
@@ -534,9 +646,10 @@ body.home-page .page-wrapper {
   background: #FCFDFE;
   margin-bottom: 20px;
   padding-top: 15px;
-  border-radius: 0 0 10px 10px;
-  margin-left: auto;
-  margin-right: 15px; }
+  border-radius: 0 0 10px 10px; }
+  @media only screen and (min-width: 1200px) {
+    .right-section {
+      max-width: 350px; } }
 
 .step-bar {
   padding-bottom: 25px; }
@@ -754,7 +867,7 @@ body.home-page .page-wrapper {
   .form-submit .form-check span.status {
     margin-left: 10px;
     font-size: 12px;
-    color: var(--text-blue); }
+    color: var(--text-purple); }
   .form-submit .form-check label {
     cursor: pointer;
     width: 55px;
@@ -784,14 +897,14 @@ body.home-page .page-wrapper {
       left: 2px;
       width: 17px;
       height: 17px;
-      background: var(--text-blue);
+      background: var(--text-purple);
       border-radius: 4px; }
   .form-submit .form-check input[type="checkbox"] {
     height: 0;
     width: 0;
     visibility: hidden; }
     .form-submit .form-check input[type="checkbox"]:checked + label {
-      background: var(--text-blue); }
+      background: var(--text-purple); }
       .form-submit .form-check input[type="checkbox"]:checked + label::before {
         content: "ON";
         left: 40%;
@@ -799,12 +912,6 @@ body.home-page .page-wrapper {
       .form-submit .form-check input[type="checkbox"]:checked + label::after {
         left: calc(100% - 18px);
         background: var(--white-smoke); }
-  .form-submit .form-check.mint-remoke-authority span.status {
-    color: #6C40BF; }
-  .form-submit .form-check.mint-remoke-authority label::after {
-    background: #6C40BF; }
-  .form-submit .form-check.mint-remoke-authority input[type="checkbox"]:checked + label {
-    background: #6C40BF; }
 
 .form-submit .form-upload-file .label-upload-logo {
   width: 100%;
