--- a/app/views/blocks/header.pug
+++ b/app/views/blocks/header.pug
@@ -3,8 +3,9 @@ header.main-header
 		.row.align-items-center.justify-content-between
 			.col-auto.d-block.d-xl-none
 				button(class="btn btn-icon btn-open-menu")
-					img(src="./images/icons/bars-icon.png", alt="" class="icon-open")
-					i.fal.fa-times.icon-close
+					//- img(src="./images/icons/bars-icon.png", alt="" class="icon-open")
+					i.far.fa-grip-lines.icon-open
+					i.far.fa-times.icon-close
 			.col-auto.col-xl-3 
 				a.logo(href="./index.html")
 					img(src="./images/logo.png", alt="Logo" class="logo-desktop")
