--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -180,9 +180,24 @@ html {
       padding: 15px; } }
   .main-header .btn-open-menu {
     padding: 12px;
-    background: #1F1D20;
+    background: var(--white-smoke);
+    color: var(--text-black);
     width: 48px;
-    height: 48px; }
+    height: 48px;
+    font-size: 24px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+    .main-header .btn-open-menu i {
+      line-height: 0; }
+    .main-header .btn-open-menu:hover {
+      color: var(--text-black); }
     .main-header .btn-open-menu.opened .icon-open {
       display: none; }
     .main-header .btn-open-menu.opened .icon-close {
@@ -503,8 +518,13 @@ body {
 body.home-page .page-wrapper {
   background-image: none; }
 
+@media only screen and (min-width: 1200px) {
+  body.home-page .menu-section {
+    height: 100vh; } }
+
 body.home-page .menu-support {
   margin-block: auto 30px;
+  padding-bottom: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -569,42 +589,133 @@ body.home-page .menu-support {
 body.home-page .home-page-section {
   width: calc(100% - 300px);
   background-image: url("../images/home-page-bg.png");
-  background-position: top;
+  height: 100vh;
+  background-position: right bottom;
   background-repeat: no-repeat;
-  background-size: contain;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-  body.home-page .home-page-section .home-snip-btn {
-    margin-left: 100px;
-    border: 12px solid rgba(194, 147, 251, 0.2);
-    background-color: white;
-    padding: 8px 24px 8px 12px;
-    border-radius: 48px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    text-decoration: none !important;
-    gap: 10px;
+  background-size: cover;
+  position: relative; }
+  @media only screen and (max-width: 1200px) {
+    body.home-page .home-page-section {
+      width: 100%;
+      max-width: 100%;
+      background-image: url("../images/home-page-bg-mobile.png");
+      height: calc(100vh - 90px);
+      background-position: bottom;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative; } }
+  body.home-page .home-page-section .home-banner {
     font-family: "Sora", sans-serif; }
-    body.home-page .home-page-section .home-snip-btn i {
-      color: #9F68F8;
-      font-size: 50px; }
-    body.home-page .home-page-section .home-snip-btn p {
-      font-size: 24px;
-      font-weight: 800;
-      color: var(--text-black); }
-      body.home-page .home-page-section .home-snip-btn p span {
-        color: red; }
+    @media only screen and (max-width: 1200px) {
+      body.home-page .home-page-section .home-banner {
+        height: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: end;
+        -ms-flex-pack: end;
+        justify-content: end;
+        padding-bottom: 100px; } }
+    body.home-page .home-page-section .home-banner .home-banner-title {
+      position: absolute;
+      right: 100px;
+      bottom: 80px;
+      text-align: right; }
+      body.home-page .home-page-section .home-banner .home-banner-title h2 {
+        font-size: 32px;
+        line-height: 54px;
+        font-weight: 800;
+        color: var(--text-black);
+        text-transform: uppercase; }
+        body.home-page .home-page-section .home-banner .home-banner-title h2 span {
+          color: red; }
+      body.home-page .home-page-section .home-banner .home-banner-title h1 {
+        font-size: 50px;
+        line-height: 54px;
+        font-weight: 800;
+        color: var(--text-black);
+        text-transform: uppercase; }
+      @media only screen and (max-width: 1200px) {
+        body.home-page .home-page-section .home-banner .home-banner-title {
+          position: unset;
+          text-align: center; }
+          body.home-page .home-page-section .home-banner .home-banner-title h2 {
+            font-size: 24px;
+            line-height: 40px; }
+          body.home-page .home-page-section .home-banner .home-banner-title h1 {
+            font-size: 35px;
+            line-height: 46px; } }
+    body.home-page .home-page-section .home-banner .home-banner-btn {
+      border: 12px solid rgba(194, 147, 251, 0.2);
+      background-color: white;
+      padding: 8px 24px 8px 12px;
+      border-radius: 48px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      text-decoration: none !important;
+      gap: 10px;
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      transform: translateY(-50%);
+      left: 100px; }
+      body.home-page .home-page-section .home-banner .home-banner-btn i {
+        color: #9F68F8;
+        font-size: 50px; }
+      body.home-page .home-page-section .home-banner .home-banner-btn p {
+        font-size: 24px;
+        font-weight: 800;
+        color: var(--text-black); }
+        body.home-page .home-page-section .home-banner .home-banner-btn p span {
+          color: red; }
+      @media only screen and (max-width: 1200px) {
+        body.home-page .home-page-section .home-banner .home-banner-btn {
+          position: unset;
+          padding: 5px 15px;
+          width: -webkit-max-content;
+          width: -moz-max-content;
+          width: max-content;
+          margin: 15px auto;
+          -webkit-transform: unset;
+          transform: unset; }
+          body.home-page .home-page-section .home-banner .home-banner-btn p {
+            font-size: 18px; } }
+    body.home-page .home-page-section .home-banner .support-socials {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      gap: 10px; }
+      body.home-page .home-page-section .home-banner .support-socials a {
+        width: 40px;
+        height: 40px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        background: #eff2f4;
+        border-radius: 4px; }
 
 .content-background-center {
   background-image: url("../images/main-bg-2.png");
@@ -644,7 +755,6 @@ body.home-page .home-page-section {
 
 .right-section {
   background: #FCFDFE;
-  margin-bottom: 20px;
   padding-top: 15px;
   border-radius: 0 0 10px 10px; }
   @media only screen and (min-width: 1200px) {
