--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -15,14 +15,14 @@ block container
 						include ./blocks/navbar
 						.menu-support 
 							a(href="#!" class="support-chat")
-								img(src="./images/dev-support-icon.png", alt="") 
+								img(src="./images/dev-support-icon.png", alt="Dev Support") 
 							.support-socials 
 								a(href="#!")
-									i.fa-brands.fa-telegram
+									img(src="./images/telegram-icon.png", width="20" alt="icon")
 								a(href="#!")
-									i.fa-brands.fa-medium
+									img(src="./images/twitter-icon.png", width="20" alt="icon")
 								a(href="#!")
-									i.fa-brands.fa-twitter
+									img(src="./images/medium-icon.png", width="20" alt="icon")
 							.support-languagues 
 								ul#myTab.nav.nav-tabs(role='tablist')
 									li.nav-item(role='presentation')
@@ -31,9 +31,21 @@ block container
 										button(class="w-100 nav-link" data-toggle='tab') Chinese
 
 				.home-page-section
-					a(href="#!" class="home-snip-btn")  
-						i.ti.ti-viewfinder
-						p 
-							| SNIP 
-							span BLOCK-O 
-							| NOW
+					.home-banner 
+						.home-banner-title 
+							h2 Easily Snipe At 
+								span Block-0
+							h1 ON SOLANA
+						a(href="#!" class="home-banner-btn")  
+							i.ti.ti-viewfinder
+							p 
+								| SNIP 
+								span BLOCK-O 
+								| NOW
+						.support-socials.d-xl-none 
+							a(href="#!")
+								img(src="./images/telegram-icon.png", width="20" alt="icon")
+							a(href="#!")
+								img(src="./images/twitter-icon.png", width="20" alt="icon")
+							a(href="#!")
+								img(src="./images/medium-icon.png", width="20" alt="icon")
